# BYOS

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  dev.sh  openapi-ts.config.ts  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py  0002_telegram_auth.py  0003_favorites.py  0004_analytics_owner.py  0005_dev_platform.py  0006_audit_logs.py  0007_folder_color.py  0008_username_alias_ns.py  0009_one_alias_per_file.py  0010_folder_aliases.py  0011_api_key_scopes.py  0012_drop_analytics_events.py  0013_user_phone.py  0014_file_missing_at.py  0015_ai_config.py  0016_ai_chat_messages.py  0017_ai_semantic.py  0018_ai_vault.py  0019_ai_conversations.py  0020_drop_chat_file_id.py  0021_index_expiry.py
apps/api/src/byos_api/: __init__.py  main.py  openapi_export.py  streaming.py
apps/api/src/byos_api/ai/: embeddings.py  extract.py  llm.py  nl_search.py  rag.py  retrieval.py  router.py  schemas.py  semantic.py  service.py  tagging.py
apps/api/src/byos_api/aliases/: router.py  schemas.py  service.py
apps/api/src/byos_api/analytics/: recorder.py  router.py  schemas.py  service.py
apps/api/src/byos_api/apikeys/: router.py  schemas.py  service.py
apps/api/src/byos_api/audit/: recorder.py  router.py  schemas.py
apps/api/src/byos_api/auth/: dependencies.py  router.py  schemas.py  service.py  telegram.py
apps/api/tests/: test_local_provider.py  test_security.py
(+127 files in other folders)
